--- a/report/textsummary.Rnw
+++ b/report/textsummary.Rnw
@@ -17,17 +17,21 @@ Summarizing a news article is the process of reducing the original document text
 Among extractive techniques there are many approaches to rank sentences and phrases within an article.  Common extractive tasks include keyphrase detection and sentence extraction -- finding the most relevant keyword or sentence.  Our goal is to summarize the overall content of a news article and our focus will be implementing an extractive method to find the most relevant sentences to summarize a news article.  The method implemented in this project is TextRank; TextRank is an unsupervised method similar to the PageRank algorithm for webpages.  Included below is a brief overview of extractive methods, an explanation of the TextRank algorithm, implementation issues and our results and conclusion.
 
 \section*{Background}
-One of the first uses for automatic summarization was to automate finding keywords or keyphrases for journal papers.  An early solution to this problem was a supervised technique; keyphrases were assigned by readers for various collections of documents and a decision tree algorithm was used to classify text as a keyphrase or not [3].  This supervised method would look at the length of the text, frequency, if the text contains nouns or verbs and a few other features to train a model to predict if a string of text is a keyphrase or not.  A decision tree method is able to determine which features are important for keyphrases but unfortunately the supervised nature of this method requires both training data and intelligent feature selection.\\
+One of the first uses for automatic summarization was to automate finding keywords or keyphrases for journal papers.  An early solution to this problem was a supervised technique; keyphrases were assigned by readers for various collections of documents and a decision tree algorithm was used to classify text as a keyphrase or not [3].  This supervised method would look at the length of the text, frequency, if the text contains nouns or verbs and a few other features to train a model to predict if a string of text is a keyphrase or not.  A decision tree method is able to determine which features are important for keyphrases but unfortunately the supervised nature of this method requires both training data and domain knowledge for feature selection.\\
 \\
-Another possible approach to automatic summarization is to use latent semantic analysis [4].  The document can be represented as an $m \times n$ matrix with sentences representing the $m$ unique word and $n$ sentences in the document.  The columns of this matrix represent the sentences in the document.  Distance between sentences are given by the cosine distance: $d(\vec{s_1}, \vec{s_2}) = \frac{\vec{s_1} \cdot \vec{s_2}}{|\vec{s_1}||\vec{s_2}|}$.  The most relevant sentences should be have the shortest average distance to other sentences.  Alternatively, its possible rank based on the sentence with the highest singular value from the singular value decomposition.\\
+Another possible approach to automatic summarization is to use latent semantic analysis [4].  The document can be represented as an $m \times n$ matrix with sentences representing the $m$ unique word and $n$ sentences in the document.  The columns of this matrix represent the sentences in the document.  Distance between sentences are given by the cosine distance: $d(\vec{s_1}, \vec{s_2}) = \frac{\vec{s_1} \cdot \vec{s_2}}{|\vec{s_1}||\vec{s_2}|}$.  The most relevant sentences should be have the shortest average distance to other sentences.  Alternatively, latent semantic analysis utilizes a singular value decomposition and it is also possible to rank sentences based on the highest singular value.\\
 \\
-More recently a few graph based methods based on the PageRank algorithm have been proposed for this problem.  The PageRank algorithm represents webpages as vertices in a graph with edges representing links between pages.  PageRank ranks webpages based on the link structure; important webpages are linked to by other important webpages [6].  This idea is extended to sentences in a document; important sentences are similar to other important sentences.  TextRank and LexRank are two algorithms that rank sentences based on this idea [2][5].  These two algorithms represent sentences in a document as vertices and edges based on a distance metric between sentences.  We give a more detailed description of the TextRank algorithm in the next section.
+More recently a few graph based methods based on the PageRank algorithm have been proposed for this problem.  The PageRank algorithm represents webpages as vertices in a graph with edges representing links between pages.  PageRank ranks webpages based on the link structure; important webpages are linked to by other important webpages [6].  This idea is extended to sentences in a document; important sentences are similar to other important sentences.  TextRank and LexRank are two algorithms that rank sentences based on this idea [2][5].  These two algorithms represent sentences in a document as vertices and edges based on a distance metric between sentences.  LexRank uses unweighted edges between sentences if the two sentences meets some minimum distance threshold using cosine distance.  TextRank uses weighted edges based on the shared number of words normalized by the log lengths of the sentences.  We chose TextRank based on its unsupervised nature and the absence of parameters to tweak.  We give a more detailed description of the TextRank algorithm in the next section.
 
-\section*{Method}
+\section*{Introduction to TextRank}
+The TextRank method is based on the PageRank algorithm.  The original PageRank algorithm is based around the idea of a random websurfer [9]; how likely are they to end up at a particular page by following hyperlinks?  The original PageRank algorithm worked on graphs with unweighted edges and the PageRank of a particular page was given by $rank(v_i) = (1 - d) + d \Sigma_{j \in in(v_i)} \frac{rank(v_j)}{|out(v_j)|}$ where $v_i$ and $v_j$ represent webpages, $in(v_j)$ represents the set of vertices that links to page $i$, $out(v_j)$ represents the pages that link from page $j$, and $d$ represents the dampening factor.  The dampening factor represents the websurfer jumping to a random page.\\
+\\
+TextRank represents sentences as vertices and edges between sentences is weighted by the following distance function: $d(s_i, s_j) = \frac{|\{w_k | w_k \in s_i & w_k \in s_j \}|}{log(|s_i|) + log(|s_j|)}$.  $s_i$ and $s_j$ represent sentence $i$ and sentence $j$.  Each sentence is a set of sets and the distance metric is the cardinality of the intersection between two sentence sets divided by the sum of the logs of the sentence lengths.  This distance function for edge weights introduces a seperate issue: the original PageRank algorithm is for unweighted graphs.  In order to get around this issue a weighted variation of PageRank is used: $rank(s_i) = (1 - d) + d \Sigma_{s_j \in In(s_i)} \frac{w_{ji}}{\Sigma_{s_k \in out(s_j)} rank(s_j)}$.  $s_i$ and $s_j$ represent sentence $i$ and sentence $j$ and $w_{ji}$ represents the edge weight between sentence $j$ and $i$.  It turns out with this slight modification we can iteratively calculate the page rank of sentences in a document.
 
+\section*{Implementation and Java Code}
+Before running the TextRank algorithm 
 
-\section*{Implementation}
-The summarizer's code is split between 7 java class files. The most important file is the SummaryBot.java file that defines a SumamryBot object. A SummaryBot is meant to take in text or a text file containing an article and summarize it down to just a few sentences. To do this it first extracts the text from the file if needed, then send it to a ISentenceProcessor object. The point of the SentenceProcessor object is to separate the text into sentences and remove unnecessary or irrelevant words. Initially we tried to implement ours in OPenNLPSentenceProcessor.java which uses the OpenNLP library to do both parts, however, we found the word removal to work too slowly. To remedy this we Created LuceneSentenceProcessor.java which uses OpenNLP to separate sentences and the Lucene library to remove extra words.\\
+Our Java implementation of TextRank is split into seven java class files. The most important file is SummaryBot.java file that defines a SumamryBot object. A SummaryBot is meant to take in text or a text file containing an article and summarize it down to just a few sentences. To do this it first extracts the text from the file if needed and then sends it to a ISentenceProcessor object.  The point of the SentenceProcessor object is to separate the text into sentences and remove unnecessary or irrelevant words. Initially we tried to implement ours in OPenNLPSentenceProcessor.java which uses the OpenNLP library to do both parts, however, we found the word removal to work too slowly. To remedy this we Created LuceneSentenceProcessor.java which uses OpenNLP to separate sentences and the Lucene library to remove extra words.\\
 \\
 After being processed, the sentences are passed to the CreateCommonMatrix method in MiscUtils.java which creates a matrix where each position i,j represents the number of words shared between sentences i and j. Then the matrix is sent to the IRanker object which uses some method to rank the sentences based on values in the matrix. We implemented using the PageRanker class which uses a variation on the PageRank algorithm to accomplish this task. Finally, with the results from the Ranker object, the SummaryBot is able to print the X best sentences for summarizing the article.
 
@@ -64,6 +68,8 @@ In this article only 1 sentences was not also summarized by the other ones.
 
 \section*{Conclusion}
 
+\section*{Sources}
+
 %citation
 %overview
 %1. http://pages.cs.wisc.edu/~goldberg/publications/summarization.pdf
@@ -79,5 +85,8 @@ In this article only 1 sentences was not also summarized by the other ones.
 %6. http://ilpubs.stanford.edu:8090/422/1/1999-66.pdf
 %7. Lucene
 %8. OpenNLP
+%page rank links:
+%9 http://ilpubs.stanford.edu:8090/422/1/1999-66.pdf
+%10 http://www.cs.princeton.edu/~chazelle/courses/BIB/pagerank.htm
 
 \end{document}
