updated writeup - need to addon to results and conclusion

--- a/report/textsummary.Rnw
+++ b/report/textsummary.Rnw
@@ -29,13 +29,17 @@ The TextRank method is based on the PageRank algorithm.  The original PageRank a
 TextRank represents sentences as vertices and edges between sentences is weighted by the following distance function: $d(s_i, s_j) = \frac{|\{w_k | w_k \in s_i & w_k \in s_j \}|}{log(|s_i|) + log(|s_j|)}$.  $s_i$ and $s_j$ represent sentence $i$ and sentence $j$.  Each sentence is a set of sets and the distance metric is the cardinality of the intersection between two sentence sets divided by the sum of the logs of the sentence lengths.  This distance function for edge weights introduces a seperate issue: the original PageRank algorithm is for unweighted graphs.  In order to get around this issue a weighted variation of PageRank is used: $rank(s_i) = (1 - d) + d \Sigma_{s_j \in In(s_i)} \frac{w_{ji}}{\Sigma_{s_k \in out(s_j)} rank(s_j)}$.  $s_i$ and $s_j$ represent sentence $i$ and sentence $j$ and $w_{ji}$ represents the edge weight between sentence $j$ and $i$.  It turns out with this slight modification we can iteratively calculate the page rank of sentences in a document.
 
 \section*{Implementation and Java Code}
-Before running the TextRank algorithm 
-
-Our Java implementation of TextRank is split into seven java class files. The most important file is SummaryBot.java file that defines a SumamryBot object. A SummaryBot is meant to take in text or a text file containing an article and summarize it down to just a few sentences. To do this it first extracts the text from the file if needed and then sends it to a ISentenceProcessor object.  The point of the SentenceProcessor object is to separate the text into sentences and remove unnecessary or irrelevant words. Initially we tried to implement ours in OPenNLPSentenceProcessor.java which uses the OpenNLP library to do both parts, however, we found the word removal to work too slowly. To remedy this we Created LuceneSentenceProcessor.java which uses OpenNLP to separate sentences and the Lucene library to remove extra words.\\
+Before running the TextRank algorithm some basic text preprocessing was done.  Punctuation was stripped from the text and stop words, words with little semantic meaning, were removed from the text using the Lucene library [7].  The text was parsed into individual sentences using the openNLP library.  The adjacency matrix was calculated between all sentences.  The adjacency matrix was normalized so that the columns sum to one and then the weighted pagerank is calculated iteratively.\\
 \\
-After being processed, the sentences are passed to the CreateCommonMatrix method in MiscUtils.java which creates a matrix where each position i,j represents the number of words shared between sentences i and j. Then the matrix is sent to the IRanker object which uses some method to rank the sentences based on values in the matrix. We implemented using the PageRanker class which uses a variation on the PageRank algorithm to accomplish this task. Finally, with the results from the Ranker object, the SummaryBot is able to print the X best sentences for summarizing the article.
+Our Java implementation of TextRank is split into seven java class files. The most important file is the SummaryBot.java file that defines a SummaryBot object. A SummaryBot is meant to take in a string or a text file containing an article and summarize it down to just a few sentences. To do this it first extracts the text from the file and then sends it to a ISentenceProcessor object.  The SentenceProcessor object is to separate the text into sentences and remove unnecessary or irrelevant words.  Initially sentence processing was done solely in openNLP with OpenNLPSentenceProcessor.java.  However, openNLP does not have stop word removal and we used part-of-speech tagging to accomplish the same task.  Due to computation time and better stop word removal we implemented the sentence processing with both libraries and this is contained in LuceneSentenceProcessor.java.\\
+\\
+After being processed, the sentences are passed to the CreateCommonMatrix method in MiscUtils.java which creates an adjacency matrix $A$ where $a_{i, j}$ represents the number of words shared between sentences i and j.  Then the matrix is sent to the IRanker object which uses some method to rank the sentences based on values in the matrix. We implemented using the PageRanker class which iteratively calculates the weighted page rank to accomplish this task. Finally, with the results from the Ranker object, the SummaryBot is able to print the best sentences for summarizing the article.\\
+\\
+As a final heuristic, SummaryBot returns the top sentences in the same order that they appear in the original 	article text.  When sentences were returned based strictly on highest PageRank, it was quite common for the top sentence to make a reference to something that appeared earlier in the article.  By returning sentences in the same order as the text in the article it increases the likelihood that the summary sentences will follow the same logical ordering as the original text.
 
 \section*{Results}
+Since this is not a supervised algorithm testing the results was not straightforward.  We did not have the resources to compare TextRank's results with human results.  There are a few numerical measures used to evaluation performance based on N-gram statistics.  Our goal was to have more interpretable results and we compare our implementation of TextRank against other available text summerizers.
+
 To test our summarizer, we took six articles and ran it through four different summarizers including ours. We then looked to see how many sentences were summarized by ours and by the others.\\
 \\
 Here are the results of testing our summarizer. If you want more details such as what sentences were actually generated by each summarizer, refer to the results.txt document.\\
